--- a/_sass/_social-icons.scss
+++ b/_sass/_social-icons.scss
@@ -14,7 +14,7 @@
   @include social-media-icon($envelope-color, $icon-transition-time);
 }
 
-.fa-twitter {
+.fa-x-twitter {
   padding: 5px;
   @include social-media-icon($twitter-color, $icon-transition-time);
 }
@@ -60,6 +60,11 @@
 }
 
 .fa-rss-square {
+  padding: 5px;
+  @include social-media-icon($rss-color, $icon-transition-time);
+}
+
+.fa-linkedin-in {
   padding: 5px;
   @include social-media-icon($rss-color, $icon-transition-time);
 }
