--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,8 @@
   <!link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
   <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
+  <script 
     src="https://kit.fontawesome.com/0cefb38108.js" crossorigin="anonymous">
   </script>
   <!-- Google Analytics -->
