--- a/_sass/_social-icons.scss
+++ b/_sass/_social-icons.scss
@@ -14,7 +14,7 @@
   @include social-media-icon($envelope-color, $icon-transition-time);
 }
 
-.fa-x-twitter {
+.fa-twitter {
   padding: 5px;
   @include social-media-icon($twitter-color, $icon-transition-time);
 }
@@ -64,7 +64,7 @@
   @include social-media-icon($rss-color, $icon-transition-time);
 }
 
-.fa-linkedin-in {
+.fa-linkedin {
   padding: 5px;
   @include social-media-icon($rss-color, $icon-transition-time);
 }
