--- a/_sass/_social-icons.scss
+++ b/_sass/_social-icons.scss
@@ -68,3 +68,8 @@
   padding: 5px;
   @include social-media-icon($rss-color, $icon-transition-time);
 }
+
+.fa-orcid {
+  padding: 5px;
+  @include social-media-icon($rss-color, $icon-transition-time);
+}
