--- a/_sass/_social-icons.scss
+++ b/_sass/_social-icons.scss
@@ -69,7 +69,7 @@
   @include social-media-icon($rss-color, $icon-transition-time);
 }
 
-.fa-orcid {
+.fa-google-scholar {
   padding: 5px;
   @include social-media-icon($rss-color, $icon-transition-time);
 }
